<resources>
    <string name="app_name">MyFirstApp</string>
    <string name="count_name">0</string>
    <string name="student_name">Student</string>
    <string name="count_btn_name">Count</string>
    <string name="random_name">Random</string>
    <string name="random_heading">Это случайное число между 0 и %1d.</string>
    <string name="back">Back</string>
    <string name="substract_name">Substraction</string>
</resources>